Created a class Timestamp. Caption's instance members Begin and End are now Timestamps instead of strings.

--- a/EnACT/EnACT.csproj
+++ b/EnACT/EnACT.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Timeline.Designer.cs">
       <DependentUpon>Timeline.cs</DependentUpon>
     </Compile>
+    <Compile Include="Timestamp.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
