--- a/EnACT/EnACT.csproj
+++ b/EnACT/EnACT.csproj
@@ -69,6 +69,9 @@
     <Compile Include="CaptionData.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="CaptionView.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="CaptionWord.cs" />
     <Compile Include="EnactXMLWriter.cs" />
     <Compile Include="EngineView.cs">
