--- a/EnACT/EnACT.csproj
+++ b/EnACT/EnACT.csproj
@@ -98,6 +98,10 @@
       <DependentUpon>CaptionData.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="CaptionView.resx">
+      <DependentUpon>CaptionView.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="EngineView.resx">
       <DependentUpon>EngineView.cs</DependentUpon>
       <SubType>Designer</SubType>
