--- a/EnACT/EnACT.csproj
+++ b/EnACT/EnACT.csproj
@@ -146,6 +146,7 @@
       <DependentUpon>Timeline.cs</DependentUpon>
     </Compile>
     <Compile Include="Timestamp.cs" />
+    <Compile Include="TimestampTypeConverter.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
