Added TimeStampUnitTest.cs, deleted UnitTest1.cs

--- a/EnACTUnitTestProject/EnACTUnitTestProject.csproj
+++ b/EnACTUnitTestProject/EnACTUnitTestProject.csproj
@@ -50,8 +50,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimeStampUnitTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EnACT\EnACT.csproj">
+      <Project>{d7effe02-1630-4897-aedb-0ceff5b257a3}</Project>
+      <Name>EnACT</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
