Add PlayheadChangedEvent to timeline
Adds the PlayheadChangedEvent to timeline. This will fire every time
the playhead is set by the user on the timeline. The mainform will
then handle the fired event.

--- a/EnACT/EnACT.csproj
+++ b/EnACT/EnACT.csproj
@@ -88,6 +88,7 @@
     <Compile Include="EngineView.Designer.cs">
       <DependentUpon>EngineView.cs</DependentUpon>
     </Compile>
+    <Compile Include="EventArguments.cs" />
     <Compile Include="JorgeForm.cs">
       <SubType>Form</SubType>
     </Compile>
