Create new class: TimelineMouseSelection
Adds a new class named TimelineMouseSelection which holds the user's
selected caption or other item.

Moves TimelineMouseAction into TimelineMouseSelection.cs

--- a/EnACT/EnACT.csproj
+++ b/EnACT/EnACT.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Timeline.Designer.cs">
       <DependentUpon>Timeline.cs</DependentUpon>
     </Compile>
+    <Compile Include="TimelineMouseSelection.cs" />
     <Compile Include="Timestamp.cs" />
     <Compile Include="TimestampTypeConverter.cs" />
     <Compile Include="Utilities.cs" />
