--- a/EnACT/EnACT.csproj
+++ b/EnACT/EnACT.csproj
@@ -101,6 +101,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Paths.cs" />
     <Compile Include="PlayheadLabel.cs">
       <SubType>Component</SubType>
     </Compile>
