--- a/EnACT/EnACT.csproj
+++ b/EnACT/EnACT.csproj
@@ -81,6 +81,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="CaptionWord.cs" />
+    <Compile Include="EngineController.cs" />
     <Compile Include="EnactXMLWriter.cs" />
     <Compile Include="EngineView.cs">
       <SubType>Component</SubType>
