--- a/EnACT/EnACT.csproj
+++ b/EnACT/EnACT.csproj
@@ -77,6 +77,9 @@
     <Compile Include="CaptionData.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="CaptionTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="CaptionView.cs">
       <SubType>Component</SubType>
     </Compile>
