Add CaptionWordList class
Adds CaptionWordList, which is to be designed for manipulation of
CaptionWords either individually or as a whole string.

--- a/EnACT/EnACT.csproj
+++ b/EnACT/EnACT.csproj
@@ -84,6 +84,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="CaptionWord.cs" />
+    <Compile Include="CaptionWordList.cs" />
     <Compile Include="EngineController.cs" />
     <Compile Include="EnactXMLWriter.cs" />
     <Compile Include="EngineView.cs">
