--- a/EnACTUnitTestProject/EnACTUnitTestProject.csproj
+++ b/EnACTUnitTestProject/EnACTUnitTestProject.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeStampUnitTest.cs" />
     <Compile Include="CaptionUnitTest.cs" />
+    <Compile Include="CaptionWordListUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EnACT\EnACT.csproj">
