--- a/EnACT/EnACT.csproj
+++ b/EnACT/EnACT.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Caption.cs" />
+    <Compile Include="CaptionStyle.cs" />
     <Compile Include="CaptionTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
