--- a/EnACT/EnACT.csproj
+++ b/EnACT/EnACT.csproj
@@ -98,6 +98,12 @@
     <Compile Include="Core\Intensity.cs" />
     <Compile Include="Core\ScreenLocation.cs" />
     <Compile Include="Core\CaptionWord.cs" />
+    <Compile Include="Forms\AboutBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AboutBox.Designer.cs">
+      <DependentUpon>AboutBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\JorgeForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -130,6 +136,9 @@
     <EmbeddedResource Include="Controls\EngineView.resx">
       <DependentUpon>EngineView.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AboutBox.resx">
+      <DependentUpon>AboutBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\JorgeForm.resx">
       <DependentUpon>JorgeForm.cs</DependentUpon>
