--- a/EnACT/EnACT.csproj
+++ b/EnACT/EnACT.csproj
@@ -124,6 +124,7 @@
       <DependentUpon>NewProjectForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Core\ProjectInfo.cs" />
+    <Compile Include="Forms\NewProjectFormEventArguments.cs" />
     <Compile Include="Miscellaneous\Paths.cs" />
     <Compile Include="Controls\PlayheadLabel.cs">
       <SubType>Component</SubType>
