--- a/EnACT/EnACT.csproj
+++ b/EnACT/EnACT.csproj
@@ -116,7 +116,7 @@
     <Compile Include="Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controllers\MarkupController.cs" />
+    <Compile Include="Forms\MainFormMarkupInteraction.cs" />
     <Compile Include="Forms\NewProjectForm.cs">
       <SubType>Form</SubType>
     </Compile>
