--- a/EnACT/EnACT.csproj
+++ b/EnACT/EnACT.csproj
@@ -129,6 +129,7 @@
     </Compile>
     <Compile Include="Core\ProjectInfo.cs" />
     <Compile Include="Forms\NewProjectFormEventArguments.cs" />
+    <Compile Include="Core\XMLReader.cs" />
     <Compile Include="Miscellaneous\Paths.cs" />
     <Compile Include="Controls\PlayheadLabel.cs">
       <SubType>Component</SubType>
