Add WriteEngineXML Method
Adds the WriteEngineXML method which writes the core data as a single
xml file to be used with the engine.

--- a/EnACT/EnACT.csproj
+++ b/EnACT/EnACT.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Controls\PlayheadLabel.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Core\XMLStrings.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Controls\CaptionView.resx">
