Add Generic EventArgs Class

--- a/Player/Player.csproj
+++ b/Player/Player.csproj
@@ -69,9 +69,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="EventArgsT.cs" />
     <Compile Include="PlayerState.cs" />
     <Compile Include="View Models\PlayerViewModel.cs" />
-    <Compile Include="View Models\SpeedRatioChangeRequestedEventArgs.cs" />
     <Compile Include="Views\PlayerWindow.xaml.cs">
       <DependentUpon>PlayerWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
