--- a/Player/Player.csproj
+++ b/Player/Player.csproj
@@ -114,7 +114,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\LibEnACT\LibEnACT.csproj">
+      <Project>{02d65fb3-f8d7-4f50-aaba-c7dfb814b97e}</Project>
+      <Name>LibEnACT</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
