Partially Move XMLReader to LibEnACT
Partially copies the Reader to LibEnACT. Moves the XMLReader extention
methods into this new class, and changes the use of EditorCaption to
just regular captions.

--- a/LibEnACT/LibEnACT.csproj
+++ b/LibEnACT/LibEnACT.csproj
@@ -50,6 +50,7 @@
     <Compile Include="SettingsXML.cs" />
     <Compile Include="Speaker.cs" />
     <Compile Include="Timestamp.cs" />
+    <Compile Include="XMLReader.cs" />
     <Compile Include="XMLStrings.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
