Add GridLocation Class
Adds GridLocation, which specifies row and column position and spans
for different screen locations.

--- a/Player/Player.csproj
+++ b/Player/Player.csproj
@@ -71,6 +71,7 @@
     </Compile>
     <Compile Include="Controls\StatefulMediaElement.cs" />
     <Compile Include="Controls\IMediaPlayer.cs" />
+    <Compile Include="GridLocation.cs" />
     <Compile Include="Models\PlayerState.cs" />
     <Compile Include="View Models\PlayerViewModel.cs" />
     <Compile Include="Views\PlayerView.xaml.cs">
