Add flash engine binary resources
The editor now will copy both the given video and the flash engine
resources when a project is created.

--- a/EnACT/Editor.csproj
+++ b/EnACT/Editor.csproj
@@ -242,6 +242,15 @@
       <Name>LibEnACT</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Engine.swf" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\SkinOverPlayFullscreen.swf" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\EditorEngine.swf" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
