--- a/EnACT/Editor.csproj
+++ b/EnACT/Editor.csproj
@@ -252,6 +252,9 @@
   <ItemGroup>
     <None Include="Resources\EditorEngine.swf" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\blank.swf" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
