Add AnimationTargetString class
The AnimationTargetString class keeps track of animation
TargetProperties so that setting them can be automated.

--- a/Player/Player.csproj
+++ b/Player/Player.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Animations\FearWordAnimation.cs" />
     <Compile Include="Animations\HappyWordAnimation.cs" />
     <Compile Include="Animations\SadWordAnimation.cs" />
+    <Compile Include="Animations\AnimationTargetString.cs" />
     <Compile Include="Animations\WordAnimationFactory.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
