Add Model and ViewModel classes for MediaPlayer

--- a/Player/Player.csproj
+++ b/Player/Player.csproj
@@ -82,8 +82,10 @@
     <Compile Include="Controls\IMediaPlayer.cs" />
     <Compile Include="GridLocation.cs" />
     <Compile Include="Miscellaneous\ExtensionMethods.cs" />
+    <Compile Include="Models\MediaPlayerModel.cs" />
     <Compile Include="Models\PlayerState.cs" />
     <Compile Include="View Models\PlayerViewModel.cs" />
+    <Compile Include="Views\MediaPlayerViewModel.cs" />
     <Compile Include="Views\PlayerView.xaml.cs">
       <DependentUpon>PlayerView.xaml</DependentUpon>
       <SubType>Code</SubType>
